// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Poster /> should generate snapshot for Poster component with FB Url 1`] = `
<div
  className="Poster col-sm-6 col-md-3 col-lg-3 col-xs-12"
>
  <div>
    <section>
      <img
        alt="Selena"
        className="mx-auto d-block"
        height="200"
        src="https://s3.amazonaws.com/bit-photos/thumb/215115.jpeg"
        width="200"
      />
    </section>
    <aside>
      <p>
        Selena
      </p>
    </aside>
  </div>
</div>
`;

exports[`<Poster /> should generate snapshot for Poster component without FB url 1`] = `
<div
  className="Poster col-sm-6 col-md-3 col-lg-3 col-xs-12"
>
  <div>
    <section>
      <img
        alt="Dua Lipa"
        className="mx-auto d-block"
        height="200"
        src="https://s3.amazonaws.com/bit-photos/thumb/8458441.jpeg"
        width="200"
      />
    </section>
    <aside>
      <p>
        Dua Lipa
      </p>
      <a
        href="https://www.facebook.com/dualipaofficial/"
        target="_blank"
      >
        <svg
          fill="currentColor"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          style={
            Object {
              "color": "#4266b2",
              "fontSize": 25,
              "verticalAlign": "middle",
            }
          }
          viewBox="0 0 40 40"
          width="1em"
        >
          <g>
            <path
              d="m30.9 2.9q2.6 0 4.5 1.8t1.9 4.6v21.4q0 2.7-1.9 4.6t-4.5 1.8h-4.2v-13.2h4.4l0.7-5.2h-5.1v-3.3q0-1.3 0.5-1.9t2-0.6l2.8 0v-4.7q-1.5-0.2-4-0.2-3.1 0-4.9 1.8t-1.8 5.1v3.8h-4.5v5.2h4.5v13.2h-11.9q-2.6 0-4.5-1.8t-1.9-4.6v-21.4q0-2.7 1.9-4.6t4.5-1.8h21.5z"
            />
          </g>
        </svg>
      </a>
    </aside>
  </div>
</div>
`;
